--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.detro</groupId>
-      <artifactId>phantomjsdriver</artifactId>
-      <version>1.2.0</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.1</version>
     </dependency>
   </dependencies>
   <build>
