--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.4</version>
+        <configuration>
+          <systemPropertyVariables>
+            <environment>${env.addr}</environment>
+          </systemPropertyVariables>
+        </configuration>
       </plugin>
     </plugins>
   </build>
